# RoomAcoustiCpp

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  DiffractionPlugin.sln  Directory.Build.props  Output-Build.txt  README.md  ROOMACOUSTICPP_LICENSE  RoomAcoustiCpp.sln  UnitTestData.txt  mkdocs.yml
.github/: requirements.txt
.github/workflows/: docs.yml
3DTI/: 3DTI.vcxitems  3DTI.vcxitems.filters
3DTI_NoSofa/: 3DTI_NoSofa.vcxitems  3DTI_NoSofa.vcxitems.filters
Android/: Android.vcxproj  Android.vcxproj.filters  libsofa_x64.lib
Android/include/: Android.h
Android/source/: Android.cpp
DiffractionPlugin/: DiffractionPlugin.vcxitems  DiffractionPlugin.vcxitems.filters
DiffractionPlugin/include/: AudioManager.h  Context.h  Debug.h  Definitions.h  DiffractionGeometry.h  DiffractionModel.h  GeometryManager.h  HelloWorld.h  IUnityInterface.h  ScopedTimer.h  Types.h  UnityGAPlugin.h  WedgeManager.h  complex.h  matrix.h  quaternion.h  vec.h  vec3.h
DiffractionPlugin/include/Common/: AudioManager.h  Coefficients.h  Complex.h  Definitions.h  HelloWorld.h  Matrix.h  Quaternion.h  ScopedTimer.h  SphericalGeometries.h  Types.h  Vec.h  Vec3.h  vec4.h
DiffractionPlugin/include/DSP/: Buffer.h  FIRFilter.h  GraphicEQ.h  IIRFilter.h  Interpolate.h  LinkwitzRileyFilter.h  ParametricEQ.h
DiffractionPlugin/include/Old code store/: EmissionManager.h  SourceManager.h  UnityGAPlugin.h
DiffractionPlugin/include/Spatialiser/: AirAbsorption.h  Context.h  Edge.h  FDN.h  FrequencyDependence.h  HRTFManager.h  ImageEdge.h  Interface.h  Main.h  Mutexes.h  Reverb.h  Room.h  Source.h  SourceManager.h  Types.h  VirtualSource.h  Wall.h
DiffractionPlugin/include/Unity/: Debug.h  Profiler.h  UnityInterface.h
DiffractionPlugin/source/: AudioManager.cpp  DiffractionGeometry.cpp  DiffractionModels.cpp  EmissionManager.cpp  GeometryManager.cpp  UnityGAPlugin.cpp  WedgeManager.cpp  matrix.cpp  vec.cpp
DiffractionPlugin/source/Common/: AudioManager.cpp  Matrix.cpp  Vec.cpp
DiffractionPlugin/source/DSP/: Buffer.cpp  FIRFilter.cpp  GraphicEQ.cpp  IIRFilter.cpp  LinkwitzRileyFilter.cpp  ParametricEQ.cpp
DiffractionPlugin/source/Old code store/: DiffractionModels.cpp  UnityGAPlugin.cpp
DiffractionPlugin/source/Spatialiser/: AirAbsorption.cpp  Context.cpp  Edge.cpp  FDN.cpp  HRTFManager.cpp  ImageEdge.cpp  Interface.cpp  Main.cpp  Reverb.cpp  Room.cpp  Source.cpp  SourceManager.cpp  VirtualSource.cpp  Wall.cpp
DiffractionPlugin/source/Unity/: Debug.cpp  Profiler.cpp  UnityInterface.cpp
MCL/: MCL.vcxitems  MCL.vcxitems.filters
ProfilingData/: .gitignore  README.md
PropertySheets/: Android.props  AndroidCommon.props  Common.props  CustomMatrix.props  Debug.props  Dll.props  Eigen.props  Exe.props  RavesCommon.props  RavesDebug.props  RavesDll.props  RavesExe.props  RavesProfile.props  RavesProfileDetailed.props  RavesRelease.props  RavesReleaseDebug.props  RavesReleaseNoOptimise.props  Release.props  Windows.props  WindowsCommon.props
RoomAcoustiCpp/: RoomAcoustiCpp.vcxitems  RoomAcoustiCpp.vcxitems.filters
UnitTest/: UnitTest.cpp  UnitTest.vcxproj
UnitTestData/: AssessImpulseResponseSimilarity.m  CreateGenelecDirectivity.m  CreateUnitTestData.m  btm.csv  diffractionPaths.csv  directivityFreq.csv  genelecDTFDirectivityOutput.csv  genelecDirectivityInput.csv  genelecDirectivityOutput.csv  graphicEQInput.csv  graphicEQOutput.csv  highShelfFilterOutput.csv  lowShelfFilterOutput.csv  peakingFilterInput.csv  peakingFilterOutput.csv
UnitTestData/SP/: harmonicY.m
UnitTesting/: CMakeLists.txt  GraphicEQTests.cpp  Test_main.cpp  UnitTesting.cpp  UnitTesting.h  UtilityFunctions.h
Windows/: .gitignore  CommandLineParser.cpp  CommandLineParser.h  MoDARTLoader.cpp  MoDARTLoader.h  ProfilePlan.cpp  ProfilePlan.h  ProfileScenes.cpp  Test.cpp  UnitTest_AirAbsorption.cpp  UnitTest_Buffer.cpp  UnitTest_Coefficients.cpp  UnitTest_DelayLine.cpp  UnitTest_DiffractionModels.cpp  UnitTest_Directivity.cpp  UnitTest_FDN.cpp  UnitTest_FDNChannel.cpp  UnitTest_FIRFilter.cpp  UnitTest_GraphicEQ.cpp  UnitTest_HighShelf.cpp  UnitTest_Interpolate.cpp  UnitTest_LinkwitzRileyFilter.cpp  UnitTest_LowPass.cpp  UnitTest_Matrix.cpp  UnitTest_OctaveBandFilter.cpp  UnitTest_PeakHighShelf.cpp  UnitTest_PeakLowShelf.cpp  UnitTest_PeakingFilter.cpp  UnitTest_Regression.cpp  UnitTest_TracingBasics.cpp  UnitTest_TracingClasses.cpp  UnitTest_TracingTypes.cpp  UnitTest_Vec3.cpp  UnitTest_Vec4.cpp  UnitTest_ZPKFilter.cpp  Windows.vcxproj  Windows.vcxproj.filters
Windows/include/: FirstDLL.h  UtilityFunctions.h  framework.h
Windows/source/: FirstDLL.cpp
docs/: about.md  index.md  requirements.txt
docs/api/: configs.md  contextoptionalarguments.md  index.md  installation.md  interface.md  structure.md  types.md
docs/classes/: index.md
docs/common/: absorption.md  access.md  coefficients.md  complex.md  definitions.md  matrix.md  releasepool.md  rowvec.md  scopedtimer.md  sphericalgeometries.md  timer.md  vec.md  vec3.md  vec4.md
docs/dspclasses/: buffer.md  firfilter.md  graphiceq.md  highpass.md  highshelf.md  iirfilter.md  iirfilter2param1.md  index.md  interpolate.md  linkwitzriley.md  lowpass.md  lowpass1.md  peakhighshelf.md  peakingfilter.md  peaklowshelf.md  zpkfilter.md
docs/overview/: about.md  diffraction.md  fdn.md  imageedge.md  index.md  model.md
docs/rac/: airabsorption.md  diffraction.md  imageedge.md  index.md  latereverb.md  model.md  sourcedirectivity.md  spatialisation.md
docs/spatialiser/: airabsorption.md  fdn.md  fdnchannel.md  householderfdn.md  index.md  interface.md  randomorthogonalfdn.md  wall.md
docs/unity/: debug.md  hrtf.md  imageedge.md  impulseresponse.md  index.md  installation.md  introduction.md  plugin.md  racaudiolistener.md  racaudiosource.md  racmanager.md  racmaterial.md  racmesh.md
(+227 files in other folders)
